--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,4 @@
-*.gem
-*.rbc
-.bundle
-.config
-coverage
-InstalledFiles
-lib/bundler/man
+.rvmrc
 pkg
-rdoc
-spec/reports
-test/tmp
-test/version_tmp
-tmp
-
-# YARD artifacts
-.yardoc
-_yardoc
-doc/
+Gemfile.lock
+.idea
